--- a/Models/SpeechLM/2024.08.27_Mini-Omni.md
+++ b/Models/SpeechLM/2024.08.27_Mini-Omni.md
@@ -34,14 +34,14 @@ To our best knowledge, ***Mini-Omni*** is the first fully end-to-end, open-sourc
 ## 1·Introduction: 引言
 
 Recent developments in large language models have progressed rapidly, with models becoming increasingly powerful, such as off-the-shelf [Llama 3.1](../TextLM/2024.07.31_LLaMA3.md), [Mixtral](../TextLM/Mixtral.md), [Qwen-2](../TextLM/Qwen2.md), and the well-known GPT-4.
-As an extension of their capabilities, language models are beginning to master understanding other modalities, exemplified by [LLaVA](../CV/LLaVA.md), [Qwen2-Audio](../SpeechLM/2024.07.15_Qwen2-Audio.md) and [Video-llama](../CV/Video-LLaMA.md).
+As an extension of their capabilities, language models are beginning to master understanding other modalities, exemplified by [LLaVA](../CV/LLaVA.md), [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) and [Video-llama](../CV/Video-LLaMA.md).
 Despite their strength in specific tasks, a significant gap remains that hinders further integration of large language models into daily application: real-time voice interaction capability.
 [GPT-4o](../TextLM/2024.09.06_GPT-4o.md), introduced by OpenAI, is the first model to feature real-time multimodal speech interaction capabilities.
 It can understand and engage with vision, audio, and text while enabling real-time speech conversations, although it remains closed-source.
 Other models typically adopt two approaches to incorporate speech capabilities.
 The first is a cascade method, where the language model generates text, followed by a text-to-speech (TTS) model for audio synthesis.
 This approach introduces significant latency due to the time required for text generation, severely impacting user experience.
-The second, an end-to-end method like [SpeechGPT](../SpeechLM/2023.05.18_SpeechGPT.md), generates text before continuing to generate audio.
+The second, an end-to-end method like [SpeechGPT](2023.05.18_SpeechGPT.md), generates text before continuing to generate audio.
 However, this still requires waiting for text generation.
 Large language models need real end-to-end speech output capabilities to provide real-time feedback.
 
@@ -60,7 +60,7 @@ Importantly, our training framework achieves this without heavy reliance on exte
 To leverage and preserve the original capabilities of the language model, we propose a parallel generation paradigm in which the transformer simultaneously produces audio and text tokens.
 Subsequently, we observed a minimal impact of the audio modality on text capabilities and further introduced **batch-based parallel generation**, which significantly enhances the model’s reasoning ability during streaming audio output.
 As a poinerr, we opted not to sacrifice audio quality for a simpler and lower bitrate audio encoder, in order to reduce the complexity of audio inference in the model.
-However, to ensure audio quality, we selected [SNAC](../Speech_Neural_Codec/2024.10.18_SNAC.md), a music-grade encoder features 8 layers of codebooks and processes hundreds of tokens per second.
+However, to ensure audio quality, we selected [SNAC](../SpeechCodec/2024.10.18_SNAC.md), a music-grade encoder features 8 layers of codebooks and processes hundreds of tokens per second.
 Innovatively, we applied **text-instructed delayed parallel generation** to address the issue of long SNAC codebook sequences.
 Experiments show that the audio output quality is on par with common TTS systems.
 
@@ -95,8 +95,8 @@ This dataset, synthesized using GPT-4o, can be used to fine-tune models to devel
 
 Recently, researchers have been increasingly focused on advancing unified models for cross-modal understanding.
 These approaches typically employ a well-pretrained neural network as the encoder for relevant modalities, using a lightweight adapter to align the encoder's output with the text input of language model.
-Classical works such as [LLaVA](../CV/LLaVA.md), [Flamingo](../CV/Flamingo.md) and [BLIP](../_Basis/BLIP.md) are used for visual understanding, while in the audio domain, models like [Whisper](../SpeechLM/2022.12.06_Whisper.md) and [Beats](../SpeechRepresentation/BEATS.md) are commonly utilized as encoders for semantic and acoustic features.
-In Llama 3.1, Whisper is employed, while [SpeechVerse](2024.05.14_SpeechVerse.md) leverages [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md); [SALMONN](../SpeechLM/2023.10.20_SALMONN.md), combine Whisper and Beats to extract features.
+Classical works such as [LLaVA](../CV/LLaVA.md), [Flamingo](../CV/Flamingo.md) and [BLIP](../_Basis/BLIP.md) are used for visual understanding, while in the audio domain, models like [Whisper](2022.12.06_Whisper.md) and [Beats](../SpeechRepresentation/2022.12.18_BEATs.md) are commonly utilized as encoders for semantic and acoustic features.
+In Llama 3.1, Whisper is employed, while [SpeechVerse](2024.05.14_SpeechVerse.md) leverages [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md); [SALMONN](2023.10.20_SALMONN.md), combine Whisper and Beats to extract features.
 Such works are often constrained to producing output in the text modality.
 
 ### Audio Language Modeling
@@ -104,21 +104,21 @@ Such works are often constrained to producing output in the text modality.
 Recently, an increasing number of studies have employed audio tokenization to bridge the gap between audio and text.
 Audio tokenization converts continuous audio signals into discrete audio tokens, enabling large language models to perform inference and even cross-modal interactions.
 As a result, a variety of speech-text tasks, such as ASR, TTS, music understanding and generation, and sound editing, can be accomplished.
-[Mega-TTS](../SpeechLM/2023.06.06_Mega-TTS.md) utilized audio codecs for speech synthesis, while efforts like [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md), and [Voicebox](../SpeechLM/2023.06.23_VoiceBox.md) have further explored optimizations in decoding methods and conditioning techniques, employing Diffusion as the converter from tokens to audio.
+[Mega-TTS](2023.06.06_Mega-TTS.md) utilized audio codecs for speech synthesis, while efforts like [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SPEAR-TTS](2023.02.07_SPEAR-TTS.md), and [Voicebox](2023.06.23_VoiceBox.md) have further explored optimizations in decoding methods and conditioning techniques, employing Diffusion as the converter from tokens to audio.
 
 ### Real-Time Human-Machine Interaction Models
 
 Since the introduction of [GPT-4o](../TextLM/2024.09.06_GPT-4o.md), real-time conversational models have achieved unprecedented results, providing near-instantaneous voice feedback to user inputs, marking a significant milestone for the next generation of multi-modal large models.
 However, the technical implementations remain proprietary.
 Models with real-time interaction capabilities are currently scarce.
-[SpeechGPT](../SpeechLM/2023.05.18_SpeechGPT.md) is an early end-to-end speech interaction model; however, it still suffers from latency due to the Audio-Text-Text-Audio (A-T-T-A) process, similar to [Spectron](2023.05.24_Spectron.md).
-[LauraGPT](../SpeechLM/2023.10.07_LauraGPT.md) also employs a similar approach but not for voice conversation scenario.
-[VITA](../SpeechLM/2024.08.09_VITA.md), [Qwen2-Audio](../SpeechLM/2024.07.15_Qwen2-Audio.md) are two models that support voice input, but they output text and rely on external TTS systems for speech synthesis. ***Mini-Omni*** is a fully end-to-end speech-to-speech conversational model.
+[SpeechGPT](2023.05.18_SpeechGPT.md) is an early end-to-end speech interaction model; however, it still suffers from latency due to the Audio-Text-Text-Audio (A-T-T-A) process, similar to [Spectron](2023.05.24_Spectron.md).
+[LauraGPT](2023.10.07_LauraGPT.md) also employs a similar approach but not for voice conversation scenario.
+[VITA](2024.08.09_VITA.md), [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) are two models that support voice input, but they output text and rely on external TTS systems for speech synthesis. ***Mini-Omni*** is a fully end-to-end speech-to-speech conversational model.
 Through our exploration, we have identified the biggest challenge in advancing this field: the logical inconsistency in reasoning when only the audio modality is present, which we will address in the following chapter.
 
 ## 3·Methodology: 方法
 
-Our innovation stems from existing methods such as [SpeechGPT](../SpeechLM/2023.05.18_SpeechGPT.md) and [Spectron](2023.05.24_Spectron.md) utilize the A-T-T-A approach, which mitigates the challenges of direct audio learning by guiding the speech generation process through text.
+Our innovation stems from existing methods such as [SpeechGPT](2023.05.18_SpeechGPT.md) and [Spectron](2023.05.24_Spectron.md) utilize the A-T-T-A approach, which mitigates the challenges of direct audio learning by guiding the speech generation process through text.
 However, generating text first and then audio is suboptimal for real-time dialogue scenarios.
 To address this, we propose a novel method for simultaneous text and audio generation.
 This approach hypothesizes that text outputs have higher information density, allowing for the same response with fewer tokens.
@@ -155,7 +155,7 @@ This approach enables the model to achieve real-time voice output in chat scenar
 
 #### Text-delay Parallel Decoding
 
-Parallel generation was first introduced by [MusicGen](../SpeechLM/2023.06.08_MusicGen.md) to accelerate the music generation process, and we have integrated this approach into the text modality to enhance reasoning capabilities.
+Parallel generation was first introduced by [MusicGen](2023.06.08_MusicGen.md) to accelerate the music generation process, and we have integrated this approach into the text modality to enhance reasoning capabilities.
 Parallel decoding is feasible because audio token codebooks used in language model training typically consist of multiple layers; generating all layers simultaneously can significantly increase model speed.
 For real-time speech output models, parallel decoding is even more critical, allowing for the generation of hundreds of audio tokens per second on standard devices.
 In this paper, we employ SNAC as the audio encoder, which comprises seven token layers with complementary relationships.
@@ -184,10 +184,10 @@ This is achieved firstly due to the strong performance of our base model, and se
 #### Audio Encoding
 
 The audio input primarily focuses on feature extraction from the input audio, with options including Hubert or a separately pretrained audio encoder.
-Given our focus on speech input, [Whisper](../SpeechLM/2022.12.06_Whisper.md) and [Qwen2-Audio](../SpeechLM/2024.07.15_Qwen2-Audio.md) also demonstrate effective performance for general audio tasks.
+Given our focus on speech input, [Whisper](2022.12.06_Whisper.md) and [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) also demonstrate effective performance for general audio tasks.
 For audio output, selecting audio tokens with a multi-codebook approach better captures audio details.
 We experimented with flattening for audio token modeling, but it resulted in excessively long tokens, which are detrimental to streaming and lead to unstable learning.
-Instead, parallel decoding, inspired by [MusicGen](../SpeechLM/2023.06.08_MusicGen.md), employs a delay pattern combined with text conditions, as illustrated in Figure 2.
+Instead, parallel decoding, inspired by [MusicGen](2023.06.08_MusicGen.md), employs a delay pattern combined with text conditions, as illustrated in Figure 2.
 
 #### Three-Stage Training
 
@@ -250,8 +250,8 @@ During fine-tuning, we use learn rate from 4e-6 to 5e-5.
 
 We first evaluated the model's performance on ASR tasks to assess its speech understanding capabilities.
 Basic experiments on speech recognition capabilities were conducted using the four test sets from [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md): test-clean, test-other, dev-clean, and dev-other.
-Results are presented in Table 2, where we compare the accuracy of our adopted speech recognition systems, [wav2vec2](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) and Whisper-small, as well as the [VITA](../SpeechLM/2024.08.09_VITA.md).
-The findings indicate that while Mini-Omni's speech recognition performance slightly lags behind [Whisper](../SpeechLM/2022.12.06_Whisper.md)-small’s decoder, it still achieves an excellent level of audio comprehension.
+Results are presented in Table 2, where we compare the accuracy of our adopted speech recognition systems, [wav2vec2](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) and Whisper-small, as well as the [VITA](2024.08.09_VITA.md).
+The findings indicate that while Mini-Omni's speech recognition performance slightly lags behind [Whisper](2022.12.06_Whisper.md)-small’s decoder, it still achieves an excellent level of audio comprehension.
 
 ### Case Study
 
