--- a/Models/Diffusion/2024.12.26_VoiceDiT.md
+++ b/Models/Diffusion/2024.12.26_VoiceDiT.md
@@ -101,6 +101,47 @@ This process reduces the original 597K speech data to a refined dataset of 400K,
 Next, we use a forced aligner to align the transcript of spoken words with the corresponding audio recording.
 Then, we truncate non-speech segments from the beginning and end of the speech segment, ensuring proper alignment between the speech and transcripts.
 
+### B·Model Architecture
+
+VoiceDiT is a latent diffusion model with two components: the TTS module, which generates text-aligned acoustic features, and Dual-condition Diffusion Transformer (Dual-DiT), a decoder that synthesizes environment-aware speech from two input conditions.
+An overview of the architecture is provided in \Fref{fig:framework}.
+
+#### TTS Module
+
+The TTS module consists of a text encoder and a duration predictor, both adopted from Glow-TTS~\cite{kim2020glow}.
+This module is responsible for extracting time-aligned linguistic information to generate the mel-spectrogram \(y_{1:F}\) from the input text sequence \(x_{1:L}\), where \(F\) and \(L\) represent the lengths of the respective sequences.
+
+First, the text encoder extracts linguistic information \(\tilde{\mu}_{1:L}\) from the input text sequence \(x_{1:L}\).
+Then, the upsampled encoded text $Up(\tilde{\mu}_{1:L}) = \tilde{\mu}_{1:L, A^*}$ is obtained according to the best alignment \(A^*\) between \(\tilde{\mu}_{1:L}\) and the mel-spectrogram \(y_{1:F}\).
+During training, the alignment \(A^*\) is determined using MAS.
+
+The text encoder is trained to maximize the probability $p(y_{1:F}; \tilde{\mu}_{1:L, A^*}, \boldsymbol{I})$ by minimizing the encoder loss ($L_{enc}$).
+Furthermore, the optimal alignment is used to extract ground truth duration $d$, which supervises the training process of duration predictor by loss function $\mathcal{L}_{dp} = \Vert \log(d) - \log(\hat{d})\Vert_2^2$, where $\hat{d}$ is predicted duration conditioned on $\tilde{\mu}_{1:L}$.
+
+During inference, the duration predictor replaces MAS to provide alignment since only text is provided at this stage.
+
+#### Dual-Condition Diffusion Transformer
+
+We present the Dual-DiT, a model designed to fuse two distinct conditions to generate natural and coherent speech.
+We begin by adopting a Transformer-based architecture~\cite{peebles2023scalable} as our base model, utilizing its multi-head attention-based fusion mechanism, which is effective at modeling long-range dependencies and facilitating efficient modality fusion~\cite{chen2023pixartalpha}.
+
+Subsequently, we explore two methods for incorporating the acoustic feature into the DiT model.
+When long acoustic features are integrated via cross-attention, the computational complexity scales quadratically with the sequence length~\cite{beltagy2020longformer}.
+Alternatively, we concatenate the acoustic features with the noisy input in the mel-spectrogram space before passing them through the DiT model.
+This method yields more stable training and produces natural-sounding speech.
+However, training the diffusion model in the high-resolution mel-spectrogram space remains computationally demanding.
+To address this, we propose a Latent Mapper, consisting of two 2D convolutional layers, to map the long acoustic features into the latent space of the DiT.
+Specifically, the acoustic feature \(\mu_{1:F}\) of size $T\times F$ is mapped into a latent representation \(\mu_{latent}\) with a resolution of $8 \times T/4 \times F/4$, aligning with the resolution of the noisy latent.
+By employing the Latent Mapper, we enable the diffusion model to be trained in the latent space, significantly reducing the computational cost by 94\% compared to pixel-space-based DiT models.
+
+To enable the model to generate sounds appropriate for the given environment conditions, we design the DiT block by incorporating a cross-attention module~\cite{vaswani2017attention}.
+In our implementation, environmental conditions are extracted using the Contrastive Language-Audio Pre-training (CLAP) audio encoder.
+
+The original DiT processes this additional conditional information through adaptive layer norm (adaLN) modules where the scale and shift parameters are regressed from the sum of the time embedding and condition label.
+However, due to adaLN's reliance on affine transformations, there is a potential risk of losing detailed conditioning information~\cite{perez2018film}.
+To address this issue, we introduce a cross-attention module between the self-attention and feed-forward layers.
+This design choice ensures that CLAP embeddings are directly injected into the DiT model via cross-attention, thereby facilitating a more precise representation of detailed environmental sounds.
+
 ## 4·Experiments: 实验
 
 ## 5·Results: 结果
