--- a/Models/Diffusion/2024.12.26_VoiceDiT.md
+++ b/Models/Diffusion/2024.12.26_VoiceDiT.md
@@ -191,6 +191,33 @@ Finally, the pre-trained HiFi-GAN vocoder~\cite{kong2020hifi} transforms the mel
 
 ## 4·Experiments: 实验
 
+### Data Description
+
+To pre-train the VoiceDiT, we use the processed WavCaps, which contains 340K non-speech data, and LibriTTS-R, a multi-speaker corpus with 585 hours of speech data.
+For fine-tuning, we utilize AudioSet-speech, a real-world speech dataset comprising 597K samples, refined to 400K for training.
+To train the I2A-Translator, we use the VGGSound dataset, which contains 165K 10-second video clips.
+CLIP image embeddings are extracted from 10 frames per video, averaged along the time axis for input.
+
+### Implementation Details
+
+The \texttt{DiT\_L/2} model, consisting of 24 DiT blocks with a hidden dimension of 1,024, serves as the backbone network.
+We adopt a VAE to encode the mel-spectrogram into a latent representation, which is then divided into patches of size 2 for the DiT input.
+For the speaker conditioning, a 192-dimensional speaker embedding is extracted using \texttt{WavLM-ECAPA}~\cite{chen2022wavlm} model from ESPnet-SPK toolkit~\cite{jung2024espnet}.
+The entire model is pre-trained for 100K steps using synthetic data exclusively and then fine-tuned for 20K steps with additional data from AudioSet-speech.
+During pre-training, duration loss ($L_{dp}$), encoder loss ($L_{enc}$), and diffusion loss ($L_{diff}$) are employed to achieve text-to-speech alignment.
+After this phase, the converged TTS module is kept frozen, and only the diffusion loss is applied.
+We use AdamW optimizer~\cite{loshchilov2017decoupled} with a constant learning rate of $ 10^{-4}$ for pre-training and halved it at fine-tuning.
+Our model is trained on 8 NVIDIA A6000 GPUs with a batch size of 16.
+In inference, we empirically set $w_{desc} = 5$, $w_{cont} = 5$ for dual classifier-free guidance.
+
+### Evaluation Metrics
+
+For objective evaluation, we utilize Frechet Audio Distance (FAD)~\cite{kilgour2018fr} and Kullback-Leibler (KL) divergence to assess audio quality, and the CLAP score to measure the correspondence between the text description and the generated audio.
+Additionally, to evaluate speech intelligibility, we calculate the word error rate (WER) of the synthesized speech against the ground truth using the Whisper \textit{Large-v3} model.
+For subjective evaluation, we assess three main aspects of speech synthesis with the environment: Mean Opinion Score (MOS) of Speech Naturalness (Nat.), MOS of Speech Intelligibility (Intel.), and Relevance to text description (REL)~\cite{liu2023audioldm}.
+During these evaluations, 20 participants rate the naturalness, intelligibility, and the match between environmental sounds and their corresponding descriptive text on a scale of 1 to 5.
+The subjective evaluation is conducted on 40 randomly selected samples per model using a unified set of prompts.
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
