--- a/Models/Diffusion/2024.12.26_VoiceDiT.md
+++ b/Models/Diffusion/2024.12.26_VoiceDiT.md
@@ -24,11 +24,11 @@
 
 ## Abstract: 摘要
 
-We present VoiceDiT, a multi-modal generative model for producing environment-aware speech and audio from text and visual prompts.
+We present ***VoiceDiT***, a multi-modal generative model for producing environment-aware speech and audio from text and visual prompts.
 While aligning speech with text is crucial for intelligible speech, achieving this alignment in noisy conditions remains a significant and underexplored challenge in the field.
-To address this, we present a novel audio generation pipeline named VoiceDiT.
+To address this, we present a novel audio generation pipeline named ***VoiceDiT***.
 This pipeline includes three key components: (1) the creation of a large-scale synthetic speech dataset for pre-training and a refined real-world speech dataset for fine-tuning, (2) the Dual-DiT, a model designed to efficiently preserve aligned speech information while accurately reflecting environmental conditions, and (3) a diffusion-based Image-to-Audio Translator that allows the model to bridge the gap between audio and image, facilitating the generation of environmental sound that aligns with the multi-modal prompts.
-Extensive experimental results demonstrate that VoiceDiT outperforms previous models on real-world datasets, showcasing significant improvements in both audio quality and modality integration.
+Extensive experimental results demonstrate that ***VoiceDiT*** outperforms previous models on real-world datasets, showcasing significant improvements in both audio quality and modality integration.
 
 ## 1·Introduction: 引言
 
@@ -51,7 +51,7 @@ More recently, AudioBox~\cite{vyas2023audiobox} introduces a unified model based
 AudioBox is trained on data annotated by a large language model or human experts, encompassing diverse speech attributes such as age, gender, and accent.
 However, as the labels primarily focus on speaker style rather than environmental context, AudioBox's ability to generate a wide range of environmental sounds remains limited.
 
-In this paper, we present VoiceDiT, a novel audio generation pipeline that not only produces natural speech but also allows for conditioning on the acoustic environment.
+In this paper, we present ***VoiceDiT***, a novel audio generation pipeline that not only produces natural speech but also allows for conditioning on the acoustic environment.
 The proposed pipeline features three key components: (1) data synthesis and refinement for limited training data, (2) a transformer-based architecture designed for multi-task performance, and (3) an image-to-audio translator~(I2A-Translator) to enhance flexibility in handling diverse inputs.
 
 Current efforts to integrate TTA and TTS systems are constrained by the lack of large speech datasets that are both accurately transcribed and reflective of the diverse audio conditions encountered in real-world scenarios~\cite{ zen2019libritts, ardila2019common, nagrani2017voxceleb, chung2018voxceleb2, kwak2024voxmm}.
@@ -69,8 +69,8 @@ Finally, to broaden our model’s applicability, we introduce a diffusion-based 
 Unlike text, images provide a more intuitive representation of environments, especially for complex or abstract scenarios.
 Through the I2A-Translator, our model can generate diverse and nuanced audio conditioned on both text and images.
 
-Our comprehensive experimental results demonstrate that VoiceDiT excels at generating environment-aware speech that aligns closely with user prompts, achieving state-of-the-art performance across both qualitative and quantitative metrics.
-This success underscores the potential of VoiceDiT for a wide range of applications.
+Our comprehensive experimental results demonstrate that ***VoiceDiT*** excels at generating environment-aware speech that aligns closely with user prompts, achieving state-of-the-art performance across both qualitative and quantitative metrics.
+This success underscores the potential of ***VoiceDiT*** for a wide range of applications.
 
 ## 2·Related Works: 相关工作
 
@@ -103,7 +103,7 @@ Then, we truncate non-speech segments from the beginning and end of the speech s
 
 ### B·Model Architecture
 
-VoiceDiT is a latent diffusion model with two components: the TTS module, which generates text-aligned acoustic features, and Dual-condition Diffusion Transformer (Dual-DiT), a decoder that synthesizes environment-aware speech from two input conditions.
+***VoiceDiT*** is a latent diffusion model with two components: the TTS module, which generates text-aligned acoustic features, and Dual-condition Diffusion Transformer (Dual-DiT), a decoder that synthesizes environment-aware speech from two input conditions.
 An overview of the architecture is provided in \Fref{fig:framework}.
 
 #### TTS Module
@@ -153,7 +153,7 @@ This component enables the model to accept visual prompts, significantly expandi
 
 #### D·Training
 
-The training process of VoiceDiT mostly follows the framework of VoiceLDM~\cite{lee2024voiceldm}, which takes two conditions as input.
+The training process of ***VoiceDiT*** mostly follows the framework of VoiceLDM~\cite{lee2024voiceldm}, which takes two conditions as input.
 First, an input audio is encoded into a latent representation \(z_0\) by a pre-trained variational autoencoder (VAE) encoder.
 A noisy latent of \(z_t\) at a specific timestep $t$ is obtained through the forward diffusion process by adding noise to \(z_0\) according to a predefined noise schedule.
 
@@ -193,7 +193,7 @@ Finally, the pre-trained HiFi-GAN vocoder~\cite{kong2020hifi} transforms the mel
 
 ### Data Description
 
-To pre-train the VoiceDiT, we use the processed WavCaps, which contains 340K non-speech data, and LibriTTS-R, a multi-speaker corpus with 585 hours of speech data.
+To pre-train the ***VoiceDiT***, we use the processed WavCaps, which contains 340K non-speech data, and LibriTTS-R, a multi-speaker corpus with 585 hours of speech data.
 For fine-tuning, we utilize AudioSet-speech, a real-world speech dataset comprising 597K samples, refined to 400K for training.
 To train the I2A-Translator, we use the VGGSound dataset, which contains 165K 10-second video clips.
 CLIP image embeddings are extracted from 10 frames per video, averaged along the time axis for input.
@@ -222,10 +222,10 @@ The subjective evaluation is conducted on 40 randomly selected samples per model
 
 ### A·Comparison with State-of-the-arts
 
-We compare our VoiceDiT model with VoiceLDM on AC-filtered~\cite{lee2024voiceldm}, which is created by transcribing the speech data from the AudioCaps test set.
+We compare our ***VoiceDiT*** model with VoiceLDM on AC-filtered~\cite{lee2024voiceldm}, which is created by transcribing the speech data from the AudioCaps test set.
 As shown in \Tref{table:main}, our model outperforms VoiceLDM across all metrics, with significant improvements of 32.9\% in WER and 28.96\% in intelligibility.
 VoiceLDM does not ensure alignment between speech and text, leading to low-quality outputs including repetitive speech.
-In contrast, by explicitly aligning speech and text through our TTS module, VoiceDiT generates more intelligible speech.
+In contrast, by explicitly aligning speech and text through our TTS module, ***VoiceDiT*** generates more intelligible speech.
 Remarkably, it even achieves a higher intelligibility score compared to the ground truth.
 
 ### B·Ablation Study
@@ -259,17 +259,17 @@ The cross-attention module captures comprehensive environmental details, compens
 
 ### C·X-to-Audio Capabilities
 
-First, we evaluate the zero-shot TTA generation capabilities of VoiceDiT on the AudioCap test set, applying dual classifier guidance with $w_{\text{desc}}=9$ and $w_{\text{cont}}=1$.
+First, we evaluate the zero-shot TTA generation capabilities of ***VoiceDiT*** on the AudioCap test set, applying dual classifier guidance with $w_{\text{desc}}=9$ and $w_{\text{cont}}=1$.
 
-As summarized in \Tref{table:modality}, VoiceDiT outperforms VoiceLDM across all evaluation metrics, demonstrating significantly superior performance.
+As summarized in \Tref{table:modality}, ***VoiceDiT*** outperforms VoiceLDM across all evaluation metrics, demonstrating significantly superior performance.
 Moreover, despite not being explicitly trained for TTA, our approach achieves better FAD and KL divergence scores compared to AudioLDM~\cite{liu2023audioldm}.
-Next, we assess the image-to-audio generation capabilities of VoiceDiT using the VGGSound test set.
-Utilizing the I2A-Translator for image-based prompts, VoiceDiT achieves a comparable KL divergence score and a superior FAD score relative to Im2Wav~\cite{sheffer2023hear}, the state-of-the-art image-to-audio generation model.
+Next, we assess the image-to-audio generation capabilities of ***VoiceDiT*** using the VGGSound test set.
+Utilizing the I2A-Translator for image-based prompts, ***VoiceDiT*** achieves a comparable KL divergence score and a superior FAD score relative to Im2Wav~\cite{sheffer2023hear}, the state-of-the-art image-to-audio generation model.
 These findings demonstrate the versatility of our model in generating high-quality audio from diverse multi-modal inputs, including text and images.
 
 ## 6·Conclusions: 结论
 
-In this paper, we propose VoiceDiT, a multi-modal generative model that generates environment-aware speech from text, audio, and visual prompts.
+In this paper, we propose ***VoiceDiT***, a multi-modal generative model that generates environment-aware speech from text, audio, and visual prompts.
 The Dual-DiT model effectively preserves speech alignment while adapting to environmental conditions, and the I2A-Translator enhances the model’s versatility by incorporating visual inputs.
-Experimental results demonstrate that VoiceDiT significantly outperforms existing methods in both audio quality and multi-modality integration.
+Experimental results demonstrate that ***VoiceDiT*** significantly outperforms existing methods in both audio quality and multi-modality integration.
 Our research facilitates adaptive speech generation for various acoustic environments, offering promising applications in filmmaking and audiobook production.
