--- a/Evaluations/2024.12.23_VERSA.md
+++ b/Evaluations/2024.12.23_VERSA.md
@@ -126,3 +126,15 @@ This section highlights the key benefits of \textit{VERSA}, focusing on its abil
 \noindent \textbf{Comprehensiveness}: \textit{VERSA} supports a wide array of evaluation metrics, including dimensions such as perceptual quality, intelligibility, affective information, and creative diversity. By incorporating these diverse measures, the toolkit provides a holistic view of system performance, especially for researchers to gain deeper insights into both the strengths and weaknesses of each method.
 
 \noindent \textbf{Efficiency}: With its all-in-one design, \textit{VERSA} significantly enhances efficiency by supporting multiple metrics within a single toolkit. Users no longer need to rely on separate tools or perform manual calculations to assess different aspects of audio performance. This workflow reduces the time, effort, and potential errors associated with using fragmented evaluation methods, accelerating the overall research and development process.
+
+## 3·Comparison to Other Toolkits
+
+As discussed in Sec.~\ref{sec:intro}, the challenges associated with subjective evaluation have propelled the community toward exploring objective evaluation metrics. The growing demand for sound evaluation toolkits has led to numerous efforts in domain-specific evaluation for sound generation.
+
+In the speech domain, prior to the deep learning era, the International Telecommunication Union Telecommunication Standardization Sector (ITU-T) played a pivotal role in designing evaluation metrics for speech processing tasks such as speech coding and speech enhancement. More recently, text-to-speech (TTS) toolkits have begun incorporating speech quality assessment features, exemplified by \textit{ESPnet-TTS}~\cite{hayashi2020espnet, hayashi2021espnet2} and \textit{Amphion}~\cite{zhang2023amphion}. Additionally, the \textit{Speech Human Evaluation Estimation Toolkit~(SHEET)} framework provides an all-in-one recipe-style toolkit for data preparation, speech quality prediction model training, and evaluation~\cite{huang2024mos}. In speech enhancement, foundational signal-level metrics were first consolidated in~\cite{fevotte2005bss_eval}, followed by extensions such as \textit{Pysepm}, which supports 10 metrics~\cite{loizou2013se}. More recent advancements include the addition of 14 speech enhancement metrics in \textit{ClearerVoice}~\cite{clearvoice}.
+
+In the audio domain, \textit{AudioLDM-Eval} focuses on evaluating audio language models with nine types of metrics~\cite{liu2023audioldm, audioldm2-2024taslp}. Stability AI has introduced three audio metrics~\cite{stable-audio}, while Sony CSL has open-sourced four additional types of audio metrics~\cite{grachten2024measuring}.
+
+In the music domain, \textit{MIR\_EVAL} is a pioneering toolkit that aggregates metrics for music information retrieval tasks~\cite{raffel2014mir_eval}. More recently, Microsoft released \textit{FADTK}, which emphasizes a comprehensive FAD-embedding space for generative music evaluation~\cite{gui2024adapting}.
+
+A summary of the related toolkits is presented in Table~\ref{tab:comparison}. Each framework has made significant contributions to the community, many serving as foundational tools for sound generation research. Building on these previous toolkits, \textit{VERSA} distinguishes itself with a general design applicable across multiple domains and its comprehensive inclusion of 63 metrics with 711 variants—capabilities that have not been achieved before.
