--- a/Evaluations/2024.12.23_VERSA.md
+++ b/Evaluations/2024.12.23_VERSA.md
@@ -138,3 +138,18 @@ In the audio domain, \textit{AudioLDM-Eval} focuses on evaluating audio language
 In the music domain, \textit{MIR\_EVAL} is a pioneering toolkit that aggregates metrics for music information retrieval tasks~\cite{raffel2014mir_eval}. More recently, Microsoft released \textit{FADTK}, which emphasizes a comprehensive FAD-embedding space for generative music evaluation~\cite{gui2024adapting}.
 
 A summary of the related toolkits is presented in Table~\ref{tab:comparison}. Each framework has made significant contributions to the community, many serving as foundational tools for sound generation research. Building on these previous toolkits, \textit{VERSA} distinguishes itself with a general design applicable across multiple domains and its comprehensive inclusion of 63 metrics with 711 variants—capabilities that have not been achieved before.
+
+## 4·Demonstration
+
+We demonstrate several use cases of \textit{VERSA} in diverse scenarios, including speech coding, speech synthesis, speech enhancement, singing synthesis, and music generation.
+
+\noindent \textbf{Speech coding} remains one of the most widely utilized applications within the speech-processing community. In this demonstration, we leverage \textit{VERSA} to evaluate nine publicly available codecs. More details and corresponding results are discussed in Table~\ref{tab:codec} in Appendix~\ref{ssec:codec}.
+
+\noindent \textbf{Text-to-speech} aims to convert text into speech signals. In this demonstration, we use \textit{VERSA} to compare nine open-source TTS models. More details and corresponding are shown in Table~\ref{tab:tts}, Appendix~\ref{ssec:tts}.
+
+\noindent \textbf{Speech enhancement}: we also demonstrate the \textit{VERSA} usage in speech enhancement in three speech enhancement models.
+More details and corresponding are shown in Table~\ref{tab:se}, Appendix~\ref{ssec:se}.
+
+\noindent \textbf{Singing synthesis} is an intersection between speech and music generation, where both speech-oriented and music-oriented evaluation metrics are needed. \textit{VERSA} offers a one-stop solution to this problem based on the collection of a variety of metrics in each domain. In this work, we demonstrate the evaluation of a range of singing voice synthesis models. More details and corresponding are shown in Table~\ref{tab:svs}, Appendix~\ref{ssec:svs}.
+
+\noindent \textbf{Music generation}: the evaluation of music generation systems has received increasing attention due to the rapid progress in model development. To consider both creativity and musical harmony, recent evaluation methods mostly utilize distribution metrics for the evaluation, exhibiting a large difference to other sound generation systems. In this demonstration, \textit{VERSA} aggregates a range of music generation evaluation metrics into a single toolkit. More details and corresponding are shown in Table~\ref{tab:music}, Appendix~\ref{ssec:music}.
