--- a/Models/Diffusion/2024.06.26_E2_TTS.md
+++ b/Models/Diffusion/2024.06.26_E2_TTS.md
@@ -408,10 +408,10 @@ Despite its simplicity, ***E2 TTS*** achieved state-of-the-art zero-shot TTS cap
 The simplicity of ***E2 TTS*** also allowed for flexibility in the input representation.
 We proposed several variants of ***E2 TTS*** to improve usability during inference.
 
-[^1]: [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md)
-[^2]: [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md)
-[^3]: [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md)
-[^4]: [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md)
+[^1]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
+[^2]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
+[^3]: [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)
+[^4]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
 [^5]: [NaturalSpeech](../../Models/E2E/2022.05.09_NaturalSpeech.md)
 [^6]: [Neural Voice Cloning with a Few Samples]
 [^7]: [Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis]
@@ -428,7 +428,7 @@ We proposed several variants of ***E2 TTS*** to improve usability during inferen
 [^18]: [Voicebox](../../Models/SpeechLM/2023.06.23_VoiceBox.md)
 [^19]: [Matcha-TTS](2023.09.06_Matcha-TTS.md)
 [^20]: [Flow-Matching](../Diffusion/2022.10.06_Flow_Matching.md)
-[^21]: [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)
+[^21]: [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)
 [^22]: [E3 TTS](../../Models/Diffusion/2023.11.02_E3_TTS.md)
 [^23]: [U-Net](../../Models/_Basis/U-Net.md)
 [^24]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
@@ -439,7 +439,7 @@ We proposed several variants of ***E2 TTS*** to improve usability during inferen
 [^29]: [The Carnegie Mellon University Pronouncing Dictionary](../../Models/TTS1_Text_Analysis/CMUdict.md)
 [^30]: [LibriHeavy](../../Datasets/2023.09.15_Libriheavy.md)
 [^31]: [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)
-[^32]: [BigVGAN](../../Models/TTS3_Vocoder/2022.06.09_BigVGAN.md)
+[^32]: [BigVGAN](../Vocoder/2022.06.09_BigVGAN.md)
 [^33]: [Classifier-Free Diffusion Guidance](2022.07.26_Classifier-Free_Guidance.md)
 [^34]: [An Investigation of Noise Robustness for Flow-Matching-Based Zero-Shot TTS]
 [^35]: [LibriSpeech-PC](../../Datasets/2023.10.04_LibriSpeech-PC.md)
